[package]
name = "torrent_file_map"
version = "0.1.0"
authors = ["sg4e <46875746+sg4e@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lava_torrent = "0.5.0"
glob = "0.3.0"
read-byte-slice = "0.1.2"
sha-1 = "0.9.1"
